--- a/src/frontend/emscripten/CMakeLists.txt
+++ b/src/frontend/emscripten/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 
 file(COPY "${CMAKE_SOURCE_DIR}/assets/buttons" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
 file(COPY "${CMAKE_SOURCE_DIR}/assets/menu" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
+file(COPY "${CMAKE_SOURCE_DIR}/assets/gif" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
 file(COPY "${CMAKE_SOURCE_DIR}/assets/web/" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/netlify.toml" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
 
