add gb/gbc support, improve audio
gb/gbc (dmg for short) support seems to fully work.
the audio uses the psg channels on the gba core.
in doing that, i found a number of audio bugs:

- psg / fifo mixing was all wrong
- "nrx4 extra len clock" bug was broken
- apu disable didn't reset the regs correctly
- gba mixing clipped to 11bits rather than 10bits

i have fixed all the above and added a simple low pass filter.

the dmg code uses the existing gba memory, rather than adding its own.

sdl2, imgui and web ports have all been updated to support this.

further, the sdl2 and web ports supports stretching the dmg screen when L is pressed.

an io debugger was added for dmg (nearly complete) and i added the audio io code to the gba io debugger.

added rom name to the title bar of the sdl2/web ports (both gba and dmg roms supported).

fixes #24
fixes #25
fixes #23

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 
+project(notorious_beeg
+    LANGUAGES CXX
+)
+
 # compiler basically inlines everything
 option(SINGLE_FILE "compile everything as a single file" OFF)
 # enable sanitizers
@@ -38,6 +42,17 @@ else ()
         backup/sram.cpp
 
         arm7tdmi/arm7tdmi.cpp
+
+        gameboy/gb.cpp
+        gameboy/cpu.cpp
+        gameboy/bus.cpp
+        gameboy/joypad.cpp
+        gameboy/ppu/ppu.cpp
+        gameboy/ppu/dmg_renderer.cpp
+        gameboy/ppu/gbc_renderer.cpp
+        gameboy/mbc.cpp
+        gameboy/timers.cpp
+        gameboy/palette_table.cpp
     )
 
     if (${INTERPRETER} EQUAL ${INTERPRETER_TABLE})
@@ -54,6 +69,37 @@ endif()
 
 target_include_directories(GBA PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+# testing this out for now
+target_precompile_headers(GBA PRIVATE
+    <fwd.hpp>
+    <gba.hpp>
+    <mem.hpp>
+    <scheduler.hpp>
+    <timer.hpp>
+    <apu/apu.hpp>
+    <arm7tdmi/arm7tdmi.hpp>
+    <arm7tdmi/barrel_shifter.hpp>
+    <arm7tdmi/helper.hpp>
+    <bit.hpp>
+    <gameboy/gb.hpp>
+    <gameboy/internal.hpp>
+    <gameboy/types.hpp>
+
+    <cstdint>
+    <cstddef>
+    <cassert>
+    <cstdio>
+    <cstring>
+    <iterator>
+    <algorithm>
+    <span>
+    <ranges>
+    <type_traits>
+    <bit>
+    <utility>
+    <numeric>
+    <cmath>
+)
 
 target_add_common_cflags(GBA PRIVATE)
 
