--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,11 +39,13 @@ list(APPEND gcc_flags
 
     # -fno-rtti
     -fno-exceptions
+    -Wno-missing-field-initializers
     # -fanalyzer
 )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    list(APPEND gcc_flags -Og) # always enable otherwise debug builds would be too slow
+    # list(APPEND gcc_flags -Og) # always enable otherwise debug builds would be too slow
+    list(APPEND gcc_flags -O3) # always enable otherwise debug builds would be too slow
 else()
     list(APPEND gcc_flags -O3)
 endif()
