--- a/src/frontend/sdl2_base/CMakeLists.txt
+++ b/src/frontend/sdl2_base/CMakeLists.txt
@@ -13,7 +13,7 @@ FetchContent_Declare(stb
 
 FetchContent_MakeAvailable(stb)
 
-add_library(stb INTERFACE)
+add_library(stb_image INTERFACE)
 target_include_directories(stb INTERFACE ${stb_SOURCE_DIR})
 
 add_library(sdl2_base sdl2_base.cpp)
@@ -21,7 +21,7 @@ add_library(sdl2_base sdl2_base.cpp)
 find_package(SDL2 CONFIG REQUIRED)
 
 target_link_libraries(sdl2_base PUBLIC frontend_base)
-target_link_libraries(sdl2_base PUBLIC SDL2::SDL2 SDL2::SDL2main stb)
+target_link_libraries(sdl2_base PUBLIC SDL2::SDL2 SDL2::SDL2main stb_image)
 
 target_include_directories(sdl2_base PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(sdl2_base PROPERTIES CXX_STANDARD 23)
