clock frame sequencer via div in gb mode
fs should be clocked via div in gba mode, however, because div cannot be
written to whilst in gba mode, it makes no difference using fixed cycles
to clock fs by.

in gb mode, div can be manually reset on write, which can cause an early
clock of fs due to falling edge.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -783,14 +783,14 @@ add_test(
     NAME "numism/00"
     COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "120" "0" "00"
 )
-# add_test(
-#     NAME "numism/01"
-#     COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "135" "0" "01" "RIGHT;120"
-# )
-# add_test(
-#     NAME "numism/02"
-#     COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "150" "0" "02" "RIGHT;120;RIGHT;135"
-# )
+add_test(
+    NAME "numism/01"
+    COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "135" "0" "01" "RIGHT;120"
+)
+add_test( # i fail this test due to mode3 length, but i have no plans to pass it
+    NAME "numism/02"
+    COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "150" "0" "02" "RIGHT;120;RIGHT;135"
+)
 add_test(
     NAME "numism/03"
     COMMAND testing "${TEST_ROM_DIR}/numism/numism.zip" "165" "0" "03" "RIGHT;120;RIGHT;135;RIGHT;150"
