add a list of fat devices supported by libfat
this allows the emulator to run homebrew that use libfat.
one such example is the biosdumper which will dump the builtin bios
to a file.
SEE: https://github.com/devkitPro/gba-examples/tree/master/utility/biosdumper

still yet to complete:
- scsd
- m3sd
- tests for every fat device

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -43,6 +43,11 @@ else ()
 
         arm7tdmi/arm7tdmi.cpp
 
+        fat/fat.cpp
+        fat/mpcf.cpp
+        fat/m3cf.cpp
+        fat/sccf.cpp
+
         gameboy/gb.cpp
         gameboy/cpu.cpp
         gameboy/bus.cpp
