add KEYCNT, needed for games that use sleep mode
some games have a sleep mode which can only be woken up be a key interrupt.
it's up to the game which keys / key combo is needed to fire the interrupt.

an example game is metroid zero mission and i think minish cap as well.
AGS also needs this. ezflash can patch in sleep mode as well.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -36,6 +36,7 @@ else ()
         bios_hle.cpp
         gpio.cpp
         rtc.cpp
+        key.cpp
 
         backup/backup.cpp
         backup/eeprom.cpp
