stub sio, enough to pass ags. rename logger.hpp->log.hpp

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -37,6 +37,8 @@ else ()
         gpio.cpp
         rtc.cpp
         key.cpp
+        sio.cpp
+        log.cpp
 
         backup/backup.cpp
         backup/eeprom.cpp
