add basic waitloop detection / skipping

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -39,6 +39,7 @@ else ()
         key.cpp
         sio.cpp
         log.cpp
+        waitloop.cpp
 
         backup/backup.cpp
         backup/eeprom.cpp
