add support for libfat (#100)
this allows the emulator to run homebrew that use libfat.
one such example is the biosdumper which will dump the builtin bios
to a file.
SEE: https://github.com/devkitPro/gba-examples/tree/master/utility/biosdumper

added:
- mpcf
- m3cf
- sccf
- ezflash

still yet to complete:
- scsd
- m3sd
- tests for every fat device

note: my impl for everything sucks. it works but code quality is so bad. the entire emulator is poorly written (apart from the cpu and scheduler, those are fine). i need to do a *huge* refactor at some point

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,9 @@ tonc/
 !src/tests/roms_and_output/**/*.png
 !src/tests/roms_and_output/**/*.zip
 !src/tests/roms_and_output/mts/misc
+
+*.bak
+*.rts
+output_test_rom
 sd_mount
 *.state*
