--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -48,6 +48,14 @@ else ()
 
         arm7tdmi/arm7tdmi.cpp
 
+        fat/fat.cpp
+        fat/mpcf.cpp
+        fat/m3cf.cpp
+        fat/sccf.cpp
+        fat/ezflash.cpp
+        fat/ezflash/S71GL064A08.cpp
+        fat/ezflash/S98WS512PE0.cpp
+
         gameboy/gb.cpp
         gameboy/cpu.cpp
         gameboy/bus.cpp
