optimise apu, impl window wrapping, impl affine obj, fix non-square obj
- fix custom callback in scheduler being overwritten
- add window wrapping. edge case is not handled, but i dont think any official game needs it.
- add obj affine 4bpp and 8bpp
- only tick apu channels when sampling, results in far less scheduled events
- removing contributing.md because no one reads it anyway
- removed changlog.md because i never updated it. i will add it back once i do a 1.0 release.
- moved netlify.toml to more appropriate location, rathet than root of project
- add apu sampling to benchmarking, gives more accurate results
- fix vcpkg toolchain chaining. instead of chaining the toolchain, i simply include() the vcpkg toolchain file. this has to be done after the first call to project() as that will setup the system name and compiler.

--- a/src/frontend/emscripten/CMakeLists.txt
+++ b/src/frontend/emscripten/CMakeLists.txt
@@ -36,7 +36,7 @@ file(COPY "${CMAKE_SOURCE_DIR}/assets/buttons" DESTINATION "${CMAKE_CURRENT_BINA
 file(COPY "${CMAKE_SOURCE_DIR}/assets/menu" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
 file(COPY "${CMAKE_SOURCE_DIR}/assets/gif" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
 file(COPY "${CMAKE_SOURCE_DIR}/assets/web/" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
-file(COPY "${CMAKE_SOURCE_DIR}/netlify.toml" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/netlify.toml" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
 
 target_link_options(notorious_beeg_EMSDK PRIVATE
     "-s;--shell-file;${CMAKE_CURRENT_SOURCE_DIR}/emscripten.html"
