--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,15 +12,6 @@ option(GBA_DEV "enable sanitizers" OFF)
 # enable logging
 option(GBA_LOGGER "enable logging" OFF)
 
-set(INTERPRETER_TABLE 0)
-set(INTERPRETER_SWITCH 1)
-set(INTERPRETER_GOTO 2)
-
-# if an interpreter backend hasn't been set, default to INTERPRETER_SWITCH
-if (NOT DEFINED INTERPRETER)
-    set(INTERPRETER ${INTERPRETER_SWITCH})
-endif()
-
 if (SINGLE_FILE)
     add_library(GBA single.cpp)
 else ()
@@ -47,6 +38,8 @@ else ()
         backup/sram.cpp
 
         arm7tdmi/arm7tdmi.cpp
+        arm7tdmi/arm/arm_table.cpp
+        arm7tdmi/thumb/thumb_table.cpp
 
         fat/fat.cpp
         fat/mpcf.cpp
@@ -67,17 +60,6 @@ else ()
         gameboy/timers.cpp
         gameboy/palette_table.cpp
     )
-
-    if (${INTERPRETER} EQUAL ${INTERPRETER_TABLE})
-        target_sources(GBA PRIVATE arm7tdmi/arm/arm_table.cpp)
-        target_sources(GBA PRIVATE arm7tdmi/thumb/thumb_table.cpp)
-    elseif(${INTERPRETER} EQUAL ${INTERPRETER_SWITCH})
-        target_sources(GBA PRIVATE arm7tdmi/arm/arm_switch.cpp)
-        target_sources(GBA PRIVATE arm7tdmi/thumb/thumb_switch.cpp)
-    elseif(${INTERPRETER} EQUAL ${INTERPRETER_GOTO})
-        target_sources(GBA PRIVATE arm7tdmi/arm/arm_goto.cpp)
-        target_sources(GBA PRIVATE arm7tdmi/thumb/thumb_goto.cpp)
-    endif()
 endif()
 
 target_include_directories(GBA PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -116,10 +98,6 @@ target_compile_definitions(GBA PRIVATE
     GBA_LOGGER=$<BOOL:${GBA_LOGGER}>
     SINGLE_FILE=$<BOOL:${SINGLE_FILE}>
     ENABLE_SCHEDULER=$<BOOL:${ENABLE_SCHEDULER}>
-    INTERPRETER=${INTERPRETER}
-    INTERPRETER_TABLE=${INTERPRETER_TABLE}
-    INTERPRETER_SWITCH=${INTERPRETER_SWITCH}
-    INTERPRETER_GOTO=${INTERPRETER_GOTO}
 )
 
 set_target_properties(GBA PROPERTIES CXX_STANDARD 23)
