--- a/.github/workflows/build_pc.yml
+++ b/.github/workflows/build_pc.yml
@@ -11,15 +11,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04]
-        preset: [imgui, imgui-dev, sdl2, sdl2-dev, benchmark-table, benchmark-switch, benchmark-goto]
+        os: [ubuntu-latest]
+        preset: [imgui, imgui-dev, sdl2, sdl2-dev, benchmark]
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Install gcc-12 (ubuntu)
-      if: ${{ matrix.os == 'ubuntu-22.04' }}
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: |
         sudo add-apt-repository ppa:ubuntu-toolchain-r/ppa -y
         sudo apt-get update
