--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup emsdk
         uses: mymindstorm/setup-emsdk@v11
         with:
-          version: '3.1.20'
+          version: '3.1.30'
 
       - name: Cmake Build
         run: |
@@ -23,6 +23,13 @@ jobs:
           # embuilder build zlib --lto=thin
           cmake --preset emsdk -DEM_USE_THREADS=ON
           cmake --build --preset emsdk --parallel 4
+
+      - name: Deploy to Github pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build/emsdk/bin # The folder the action should deploy.
+          # single-commit: true # Start branch with no history
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
